# salary-management-incubyte

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json
artifacts/: ai-collaboration.md  architecture.md  design.md  next-session.md  performance.md  prompts.md  setup-prompt.md  trade-offs.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  employees.py  insights.py
backend/app/db/: engine.py
backend/app/domain/: country.py  department.py  email.py  employee.py  employment_type.py  salary.py
backend/app/domain/data/: iso3166_alpha2.json
backend/app/repositories/: employee_repository.py  orm.py  protocol.py
backend/app/schemas/: employee.py  insights.py
backend/app/seed/: data.py  run.py
backend/app/services/: employee.py
backend/tests/: factories.py  fakes.py
backend/tests/integration/: conftest.py  test_employee_repository.py  test_seed.py
backend/tests/integration/api/: test_cors.py  test_employees.py  test_insights.py
backend/tests/unit/: test_in_memory_employee_repository.py
backend/tests/unit/domain/: test_country.py  test_department.py  test_email.py  test_employee.py  test_employment_type.py  test_salary.py
backend/tests/unit/services/: test_employee_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.tsx  test-setup.ts
frontend/src/components/: Layout.test.tsx  Layout.tsx
frontend/src/lib/: api.test.ts  api.ts  format.ts
(+18 files in other folders)
