[project]
name = "salary-management-backend"
version = "0.1.0"
description = "Salary management tool for HR — backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110",
    "pydantic[email]>=2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
